unpackaged/main/default/objects/conference360__Form_Big_List_Option__c/fields/conference360__Form_Big_List_Group__c.field-meta.xml
<CustomField>
    <fullName>conference360__Form_Big_List_Group__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Form Big List Group</label>
    <referenceTo>conference360__Form_Big_List_Group__c</referenceTo>
    <relationshipLabel>Form Big List Option</relationshipLabel>
    <relationshipName>Form_Big_List_Option</relationshipName>
    <type>Lookup</type>
</CustomField>