unpackaged/main/default/objects/conference360__Form_Big_List_Option__c/fields/conference360__Option_Value__c.field-meta.xml
<CustomField>
    <fullName>conference360__Option_Value__c</fullName>
    <inlineHelpText>This is the value that is saved in Salesforce as the answer.</inlineHelpText>
    <label>Option Value</label>
    <length>255</length>
    <type>Text</type>
</CustomField>